--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
     "@tailwindcss/vite": "^4.0.9",
     "@tanstack/react-query": "^5.66.11",
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.7",
+    "jspdf": "^3.0.0",
     "lucide-react": "^0.476.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "react-script": "^2.0.5",
     "react-scripts": "^5.0.1",
+    "react-to-print": "^3.0.5",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.9",
     "web-vitals": "^4.2.4"
